# k8-pod-notifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  config.yaml  example.deployment.yaml  example.env  notifier.py  pyproject.toml
